# NeuroNerds

./: .gitignore  README.md  app.json  build.gradle  package-lock.json  package.json  settings.gradle
Server/medicalServer/: db.sqlite3
Server/medicalServer/login/: models.py  views.py
Server/medicalServer/login/migrations/: 0002_auto_20210122_1246.py  0003_auto_20210205_0131.py
Server/medicalServer/medicalServer/: settings.py
Server/medicalServer/studies/: models.py  views.py
Server/medicalServer/studies/migrations/: 0009_auto_20210205_0131.py
Server/processingServer/: db.sqlite3
Server/processingServer/processingServer/: settings.py
app/: build.gradle
app/src/androidTest/java/com/example/nsgapp/: ExampleInstrumentedTest.java
app/src/androidTest/java/kitware/com/volumerender/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.java  VTKView.java  VolumeRenderLib.java
app/src/main/java/com/example/nsgapp/: CustomPatientList.java  InterfaceAPI.java  LoginRequest.java  LoginResponse.java  Logout.java  MainActivity.java  RetrofitClientInstance.java  Study.java  login_screen.java  patient_list.java
app/src/main/java/kitware/com/volumerender/: MainActivity.java  VolumeRenderLib.java  VolumeRenderView.java
app/src/main/jni/: CMakeLists.txt  vtk-lib.cpp
app/src/main/jni/include/vtk-9.0/: vtkWrappingToolsModule.h
app/src/main/jni/lib/cmake/vtk-9.0/: VTK-targets-debug.cmake  VTK-targets.cmake  VTK-vtk-module-find-packages.cmake  VTK-vtk-module-properties.cmake  vtk-config.cmake
app/src/main/res/drawable/: bg_key.xml  list_item_selector.xml  menu_item_background_selector.xml  menu_item_text_selector.xml
app/src/main/res/layout/: activity_login_screen.xml  activity_main.xml  activity_patient_list.xml  content_patient_list.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
app/src/test/java/com/example/nsgapp/: ExampleUnitTest.java
app/src/test/java/kitware/com/volumerender/: ExampleUnitTest.java
assets/: NSG-Logo.ai  ico.ai
gradle/wrapper/: gradle-wrapper.properties
src/: App.js  style.css
src/components/: CupertinoButtonInfo.js  CupertinoButtonInfo1.js  CupertinoSegmentWithThreeTabs.js  CupertinoSegmentWithThreeTabs1.js  CupertinoSegmentWithThreeTabs2.js  CupertinoToolbar.js  Hometab.js  MaterialHeader1.js  MaterialUnderlineTextbox.js  Username.js
src/screens/: ContactUs.js  Home.js  Home1.js  HomePage.js  HomePage1.js  NsGinfo.js  NsGinfo1.js  Untitled.js
vtk/: build.gradle
vtk/src/androidTest/java/com/example/vtk/: ExampleInstrumentedTest.java
vtk/src/main/: AndroidManifest.xml
vtk/src/main/jni/: CMakeLists.txt  vtk-lib.cpp
vtk/src/main/jni/include/include/vtk-8.2/: vtkConfigure.h
vtk/src/main/jni/include/vtk-8.2/: vtkConfigure.h
vtk/src/main/jni/include/vtk-8.2/vtkdoubleconversion/double-conversion/: vtkdoubleconversion_export.h
vtk/src/main/jni/lib/cmake/vtk-8.2/: VTKConfig.cmake  VTKTargets.cmake
vtk/src/main/jni/lib/lib/cmake/vtk-8.2/: VTKConfig.cmake  VTKTargets-debug.cmake  VTKTargets.cmake
vtk/src/main/res/layout/: activity_main2.xml
vtk/src/test/java/com/example/vtk/: ExampleUnitTest.java
